--- a/index.html
+++ b/index.html
@@ -188,9 +188,9 @@
                     operating system, that computer would be a simple shell of possibilities.
                 </div>
                 <div class="sm x-center"><img class="d-sm-none col-10 pb-35 flex-shrink-1" src="images/iphoneapp-sm.png" alt=""></div>
-                <div class="head-apps d-flex justify-content-around">
-                    <img src="images/appstore-badge.png" alt="">
-                    <img src="images/google-play-badge.png" alt="">
+                <div class="head-apps d-flex">
+                    <img class="app mr-5 mr-md-15 nr-xl-30" src="images/appstore-badge.png" alt="">
+                    <img class="app" src="images/google-play-badge.png" alt="">
                 </div>
             </div>
             <div class="head-two col-6 d-md-flex justify-content-center mt-75">
@@ -466,7 +466,7 @@
             </div>
         </div>
         <form class="forms" method="post" action="#" id="login">
-            <input class="input input-text-2 input-theme bg-white pos-rel z-i-1 text-size-1 mb-15 mb-xl-20 pl-15"
+            <input class="input input-form my-input"
                    id="sign-mail" type="text" placeholder="Email">
             <div class="selling-btn">
                 <a href="#" class="my-btn bg-darker text-white px-50">REGISTER</a>
@@ -482,7 +482,7 @@
 
         <h2 class="d-xl-none my-h2 mb-0">Testimonials</h2>
         <h2 class="d-none d-xl-block my-h2 mb-0">What People Say</h2>
-        <div class="swiper-container my-swiper-container sw2">
+        <div class="swiper-container my-swiper-container sw2 mt-20">
             <div class="swiper-wrapper mb-xl-150">
                 <div class="swiper-slide">
                     <div class="marg-cent mb-80">
@@ -691,12 +691,11 @@
             <div class="col-12 col-md-4">
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
                     <form class="form pos-rel z-index-1 " method="post" action="#" id="get-in">
-                        <input class="input input-text input-theme input-border bg-white text-size-1 mb-15 mb-xl-20 pl-15"
+                        <input class="input input-form input-border"
                                id=name" type="text" placeholder="Name*">
-                        <input class="input input-text input-theme input-border bg-white text-size-1 mb-15 mb-xl-20 pl-15"
+                        <input class="input input-form input-border"
                                id="email" type="text" placeholder="Email*">
-                        <textarea class="input input-text input-theme input-border textarea-height bg-white text-size-1 mb-15 mb-xl-20 pl-15"
-                                  id="message-farm" placeholder="Message"></textarea>
+                        <textarea class="input input-form input-border textarea-height" placeholder="Message"></textarea>
                         <div class="checked-sect y-center text-light z-index-1 mb-10 mb-xl-20">
                             <label class="checkbox-label y-center">
                                 <input type="checkbox" class="checkbox" />
