--- a/index.html
+++ b/index.html
@@ -610,10 +610,8 @@
 
 <!--  Доп  -->
 <div class="container xy-center h-425">
-    <div class="wow bounceInUp" data-wow-duration="2s" data-wow-delay="1s">
-        <div class=" my-wow xy-center text-center">
+    <div class="wow bounceInUp my-for-wow xy-center text-center">
             Content to Reveal Here
-        </div>
     </div>
 </div>
 <!--    7  -->
