добавил анимацию, убрал баги

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <!-- Initialize Swiper -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 
-    <link rel="stylesheet" href="css/animate.css">
     <title>KOFMANN</title>
     <svg style="display: none;">
         <symbol viewBox="0 0 29 29" id="icon-search">
@@ -711,7 +710,7 @@
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
                     <form class="form pos-rel z-index-1 " method="post" action="#" id="get-in">
                         <input class="input input-form input-border"
-                               id=name" type="text" placeholder="Name*">
+                               id="name" type="text" placeholder="Name*">
                         <input class="input input-form input-border"
                                id="email" type="text" placeholder="Email*">
                         <textarea class="input input-form input-border textarea-height" placeholder="Message"></textarea>
@@ -915,12 +914,7 @@
     });
 </script>
 
-<script src="js/wow.min.js"></script>
-<script>
-    new WOW().init();
-</script>
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
 <script
     src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -930,6 +924,10 @@
 
 <script src="js/scroll.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
+<script src="js/wow.min.js"></script>
+<script>
+     new WOW().init();
+    </script>
 
 </body>
 </html>
