--- a/index.html
+++ b/index.html
@@ -607,19 +607,14 @@
     </div>
 </section>
 
-<!--  Доп  -->
-<div class="container xy-center h-425">
-    <div class="wow bounceInUp my-for-wow">
-    </div>
-</div>
 <!--    7  -->
 
 <section class="plans bg-lighter position-relative">
     <div class="container py-45 py-md-50 py-xl-55 text-center">
         <h5 class="my-h2 mb-0">Subscribing Plans</h5>
         <div class="plans-sect row d-flex justify-content-around flex-wrap">
-            <div class="plans-t col-11 col-sm-6 col-md-3 pb-15 pb-md-0">
-                <div class="cards bg-white pos-rel">
+            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards wow fadeIn bg-white pos-rel">
                     <div class="plan-picture-div position-relative mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_1313921.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
@@ -631,14 +626,14 @@
                         </div>
                     </div>
                     <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center">Basic Collections<br>10 Messages<br>50 Images per Day
+                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Basic Collections<br>10 Messages<br>50 Images per Day
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-3 pb-15 pb-md-0">
-                <div class="cards bg-white pos-rel">
+            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards wow pulse bg-white pos-rel">
                     <div class="plan-picture-div position-relative mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_2161835.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
@@ -650,14 +645,14 @@
                         </div>
                     </div>
                     <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center">Multiple Collections<br>100 Messages<br>100 Images per Day
+                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Multiple Collections<br>100 Messages<br>100 Images per Day
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-3 pb-15 pb-md-0">
-                <div class="cards bg-white pos-rel">
+            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards wow bounce bg-white pos-rel">
                     <div class="plan-picture-div position-relative mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_3759234.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
@@ -669,14 +664,14 @@
                         </div>
                     </div>
                     <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center">Unlimited Collections<br>500 Messages<br>300 Images per Day<br>Project Reviews
+                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>500 Messages<br>300 Images per Day<br>Project Reviews
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
                 </div>
             </div>
-            <div class="plans-t col-11 col-sm-6 col-md-3 pb-15 pb-md-0">
-                <div class="cards bg-white pos-rel">
+            <div class="plans-t col-11 col-sm-6 col-md-4 col-lg-3 pb-15 pb-lg-0">
+                <div class="cards wow pulse bg-white pos-rel">
                     <div class="plan-picture-div position-relative mb-30 mb-md-20">
                         <img class="plan-picture" src="images/p_415695278.jpg" alt="">
                         <div class="plan-price pos-abs bold y-center flex-column z-index-1">
@@ -688,7 +683,7 @@
                         </div>
                     </div>
                     <div class="plans-content pb-30 px-35 pb-xl-40 px-xl-50 x-center flex-column">
-                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center">Unlimited Collections<br>Unlimited Messages<br>Unlimited Images per Day<br>Project Reviews
+                        <div class="plan-descr text-size-1 text-darker mb-15 mb-ml-20 mb-xl-15 text-nowrap text-center text-truncate">Unlimited Collections<br>Unlimited Messages<br>Unlimited Images per Day<br>Project Reviews
                         </div>
                         <div class="my-btn bg-lighter border-2 caption-3 text-nowrap">GET STARTED</div>
                     </div>
@@ -704,8 +699,8 @@
     <div class="container text-center py-45 py-md-50 py-xl-55">
 
         <div class="my-h2 text-white mb-0">Get in Touch</div>
-        <div class="get-in-sect row justify-content-around pb-xl-50">
-            <div class="col-11 col-md-4">
+        <div class="get-in-sect row justify-content-around pb-md-25 pb-xl-50">
+            <div class="col-11 col-md-6 col-lg-5 col-xl-4">
                 <div class="cards bg-dark grad-light-45 pos-rel mx-auto px-20 py-25 px-md-30 px-xl-50 py-xl-35">
                     <form class="form pos-rel z-index-1 " method="post" action="#" id="get-in">
                         <input class="input input-form input-border"
@@ -731,7 +726,7 @@
         </div>
         <div class="row">
             <div class="col-10">
-                <div class="d-md-flex justify-content-center pt-45 pt-md-0 pr-xl-25" >
+                <div class="d-md-flex justify-content-center pt-45 pt-md-0 pr-xl-25">
                     <div class="address y-center text-white text-nowrap mr-md-45">
                         <svg width="20" height="20">
                             <use xlink:href="#icon-location"></use>
